# scholarpress-publish

./: .gitignore  LICENSE
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-07-02-nextjs-frontend.md  2026-07-02-phase-4-llm-tools.md  2026-07-03-build-document-tool.md  2026-07-03-phase-5-dual-parser.md
docs/superpowers/specs/: 2026-07-02-phase-4-design.md  2026-07-03-build-document-tool-design.md  2026-07-03-phase-6-llm-extraction-fix.md  2026-07-09-cluster-margin-checking-design.md  2026-07-09-synthetic-margin-test-suite-design.md
rust-doc-service/: .env.example  Cargo.toml  Dockerfile
rust-doc-service/src/: config.rs  error.rs  lib.rs  main.rs
rust-doc-service/src/compile/: mod.rs
rust-doc-service/src/extract/: document.rs  docx_parser.rs  mod.rs  pdf_parser.rs
rust-doc-service/src/institutions/: mod.rs
rust-doc-service/src/routes/: compile.rs  extract.rs  mod.rs  spec.rs
rust-doc-service/tests/: extract_test.rs
