[package]
name = "doc-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
xberg = "5.0.0-rc.32"
kreuzberg = { version = "5.0.0-rc.32", features = ["pdf"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["multipart", "json"] }
